--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A One Music Bot</title>
+    <link rel="icon" href="logo.jpg" type="image/jpeg">
     <style>
         /* --- CSS STYLES --- */
         body {
