--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
                 // 2. രണ്ടാമത്തെ പാട്ട്: KUMKI (പുതിയത്)
                 else if (text.toLowerCase() === "kumki") {
                     // NOTE: Ensure you have 'Kumki.jpg' and 'Kumki.mp3' files in the same directory
-                    addSongCard("Kumki", "Kumki.jpg"); 
+                    addSongCard("Kumki", "mhr-munthirichar.jpg"); 
                 }
                 else if (text.toLowerCase() ==="salam") {
                     // NOTE: Ensure you have 'salam.mp3' and 'logo.jpg' (or 'salam.jpg') files in the same directory
-                    addSongCard("salam","logo.jpg")
+                    addSongCard("salam","salam.jpg")
                 }
                 
                 // 3. മറ്റ് പാട്ടുകൾ ഇവിടെ else if ഉപയോഗിച്ച് ചേർക്കുക
