--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                 } 
                 
                 // 2. രണ്ടാമത്തെ പാട്ട്: KUMKI (പുതിയത്)
-                else if (text.toLowerCase() === "kumki") {
-                    // NOTE: Ensure you have 'Kumki.jpg' and 'Kumki.mp3' files in the same directory
-                    addSongCard("Kumki", "mhr-munthirichar.jpg"); 
+                else if (text.toLowerCase() === "mhr_munthirichar") {
+                    // NOTE: Ensure you have 'mhr_munthirichar.jpg' and 'Kumki.mp3' files in the same directory
+                    addSongCard("mhr_munthirichar", "mhr_munthirichar.jpg"); 
                 }
                 else if (text.toLowerCase() ==="salam") {
                     // NOTE: Ensure you have 'salam.mp3' and 'logo.jpg' (or 'salam.jpg') files in the same directory
