--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     // NOTE: Ensure you have 'mhr_munthirichar.jpg' and 'Kumki.mp3' files in the same directory
                     addSongCard("mhr_munthirichar", "mhr_munthirichar.jpg"); 
                 }
-                else if (text.toLowerCase() ==="salam") {
+                else if (text.toLowerCase() ==="Salam") {
                     // NOTE: Ensure you have 'salam.mp3' and 'logo.jpg' (or 'salam.jpg') files in the same directory
                     addSongCard("salam","salam.jpg")
                 }
