--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
                 else if (lowerText === "salam") {
                     addSongCard("Salam", "salam.jpg", "Salam.mp3");
                 }
+                    if (lowerText === "Shariya") {
+                    addSongCard("Shariya", "Shariya.jpg", "Nera.mp3"); 
+                }
+                        if (lowerText === "Hope") {
+                    addSongCard("hope.song", "hope.jpg", "Nera.mp3"); 
+                }
+                            if (lowerText === "Ilakozhiye") {
+                    addSongCard("Ilakozhiye", "Ilakozhiye.jpg", "Nera.mp3"); 
+                } 
                 
                 // 4. മുകളിൽ പറഞ്ഞതൊന്നുമല്ലെങ്കിൽ
                 else {
