--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                 } 
                 
                 // 2. രണ്ടാമത്തെ പാട്ട്: mhr_munthirichar
-                else if (lowerText === "mhr_munthirichar") {
-                    addSongCard("MHR Muntirichar", "mhr_munthirichar.jpg", "mhr_munthirichar.mp3"); 
+                else if (lowerText === "Mhr munthirichar") {
+                    addSongCard("mhr_muntirichar", "mhr_munthirichar.jpg", "mhr_munthirichar.mp3"); 
                 }
                 
                 // 3. മൂന്നാമത്തെ പാട്ട്: Salam
