--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </header>
 
         <div class="chat-window" id="chatWindow">
-            <div class="message bot-msg">Hi! Type song name. (e.g., Nera, Salam, Shariya)</div>
+            <div class="message bot-msg">Hi! Type song name.</div>
         </div>
         
         <div class="input-area">
