--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="app-container">
         <header>
             <img src="logo.jpg" alt="Logo" class="logo" onerror="this.src='https://via.placeholder.com/40?text=Bot'">
-            <div class="title">A One Music Bot</div>
+            <div class="title">A One Music Bot | 10M+ users</div>
         </header>
 
         <div class="chat-window" id="chatWindow">
@@ -222,9 +222,9 @@
         const songData = {
             "nera": { displayName: "Nera", imageName: "Nera.jpg", audioFileName: "Nera.mp3" },
             "mhr munthirichar": { displayName: "Mhr Munthirichar", imageName: "mhr_munthirichar.jpg", audioFileName: "mhr_munthirichar.mp3" },
-            "salam": { displayName: "Salam", imageName: "salam.jpg", audioFileName: "Salam.mp3" },
+            "salam": { displayName: "Salam", imageName: "salam.jpg", audioFileName: "salam.mp3" },
             "shariya": { displayName: "Shariya", imageName: "Shariya.jpg", audioFileName: "Shariya.mp3" }, 
-            "hope": { displayName: "Hope Song", imageName: "hope.jpg", audioFileName: "Hope_Song.mp3" }, 
+            "hope": { displayName: "Hope Song", imageName: "hope.jpg", audioFileName: "hope_song.mp3" }, 
             "ilakozhiye": { displayName: "Ilakozhiye", imageName: "Ilakozhiye.jpg", audioFileName: "Ilakozhiye.mp3" } 
         };
 
