--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         </header>
 
         <div class="chat-window" id="chatWindow">
-            <div class="message bot-msg">Hi! Type song name.</div>
-        </div>
+            <div class="message bot-msg">Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a></div>
+            </div>
         
         <div class="input-area">
             <input type="text" id="userInput" class="input-box" placeholder="Send Song name...">
@@ -265,7 +265,7 @@
             chatWindow.appendChild(div);
             scrollToBottom();
         }
-
+        
         // 4. Helper function to add the complex Song Card
         function addSongCard(displayName, imageName, audioFileName) {
             const div = document.createElement("div");
