--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </header>
 
         <div class="chat-window" id="chatWindow">
-            <div class="message bot-msg">Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a></div>
+            <div class="message bot-msg">type song name correct Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a></div>
             </div>
         
         <div class="input-area">
