--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             div.innerHTML = `
                 <div class="song-card">
                     <img src="${imageName}" class="song-cover" onerror="this.src='https://via.placeholder.com/200x150?text=No+Image'">
-                    <div class="song-info">🎵 **${displayName}**</div>
+                    <div class="song-info">🎵 ${displayName}</div>
                     <div class="controls">
                         <button class="btn play-btn" onclick="toggleMusic('${songUrl}', this)">▶ Play</button>
                         <a href="${songUrl}" download="${displayName.replace(/\s/g, '_')}.mp3" class="btn download-btn">⬇️ Download</a>
