--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         const songData = {
             "nera": { displayName: "Nera", imageName: "Nera.jpg", audioFileName: "Nera.mp3" },
             "mhr munthirichar": { displayName: "Mhr Munthirichar", imageName: "mhr_munthirichar.jpg", audioFileName: "mhr_munthirichar.mp3" },
-            "salam": { displayName: "Salam", imageName: "salam.jpg", audioFileName: "salam.mp3" },
+            "salam": { displayName: "Salam", imageName: "salam.jpg", audioFileName: "Salam.mp3" },
             "shariya": { displayName: "Shariya", imageName: "Shariya.jpg", audioFileName: "Shariya.mp3" }, 
             "hope": { displayName: "Hope Song", imageName: "hope.jpg", audioFileName: "hope_song.mp3" }, 
             "ilakozhiye": { displayName: "Ilakozhiye", imageName: "Ilakozhiye.jpg", audioFileName: "Ilakozhiye.mp3" } 
