--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <div class="chat-window" id="chatWindow">
             <div class="message bot-msg">type song name correct.
-                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a></div>
+                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a> <br> available songs:- <br> 1.Salam, 2.Shariya, 3.mhr munthirichar, 4.nera, 5.Ilakozhiye,6.jaalakaari,7.hope</div>
             </div>
         
         <div class="input-area">
