--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             "shariya": { displayName: "Shariya", imageName: "Shariya.jpg", audioFileName: "Shariya.mp3" }, 
             "hope": { displayName: "Hope Song", imageName: "hope.jpg", audioFileName: "hope_song.mp3" }, 
             "ilakozhiye": { displayName: "Ilakozhiye", imageName: "Ilakozhiye.jpg", audioFileName: "Ilakozhiye.mp3"},
-            {"jaalakaari": { displayName: "jaalakaari", imageName: "jaalakaari.jpg", audioFileName: "jaalakaari.mp3"}
+            "jaalakaari": { displayName: "jaalakaari", imageName: "jaalakaari.jpg", audioFileName: "jaalakaari.mp3"}
         };
 
         // 2. Function to handle sending message
