--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             "hope": { displayName: "Hope Song", imageName: "hope.jpg", audioFileName: "hope_song.mp3" }, 
             "ilakozhiye": { displayName: "Ilakozhiye", imageName: "Ilakozhiye.jpg", audioFileName: "Ilakozhiye.mp3"},
             "jaalakaari": { displayName: "jaalakaari", imageName: "jaalakaari.jpg", audioFileName: "jaalakaari.mp3"},
-            "kaadhal ponmaan":{ displayName: "Kaadhal Ponmaam", imageName:"logo.jpg, audioFileName: "kaadhal_ponmaan.mp3"}
+            "jaalakaari": { displayName: "jaalakaari", imageName: "jaalakaari.jpg", audioFileName: "jaalakaari.mp3"},
         };
 
         // 2. Function to handle sending message
