--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
             "ilakozhiye": { displayName: "Ilakozhiye", imageName: "Ilakozhiye.jpg", audioFileName: "Ilakozhiye.mp3"},
             "jaalakaari": { displayName: "jaalakaari", imageName: "jaalakaari.jpg", audioFileName: "jaalakaari.mp3"},
             "kaadhal ponmaan": { displayName: "Kaadhal Ponmaan", imageName: "kaadhal_ponmaan.jpg", audioFileName: "kaadhal_ponmaan.mp3"},
+            "kannukulla": { displayName: "Kannukulla", imageName: "kannukulla.jpg", audioFileName: "kannukulla.mp3"},
+            "kozhipunk": { displayName: "Kozhipunk", imageName: "kozhipunk.jpg", audioFileName: "kozhipunk.mp3"},
+            "madhuramoorunna": { displayName: "Madhuramoorunna", imageName: "madhuramoorunna.jpg", audioFileName: "madhuramoorunna.mp3"},
+            "maine pyar kiya": { displayName: "Maine Pyar Kiya", imageName: "maine.jpg", audioFileName: "maine-pyar-kiya.mp3"},
+            "kaadhal ponmaan": { displayName: "Kaadhal Ponmaan", imageName: "kaa.jpg", audioFileName: "naalo-unna-parema-nantha.mp3"},
         };
         
         /**
