--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             "kozhipunk": { displayName: "Kozhipunk", imageName: "kozhipunk.jpg", audioFileName: "kozhipunk.mp3"},
             "madhuramoorunna": { displayName: "Madhuramoorunna", imageName: "madhuramoorunna.jpg", audioFileName: "madhuramoorunna.mp3"},
             "maine pyar kiya": { displayName: "Maine Pyar Kiya", imageName: "maine.jpg", audioFileName: "maine-pyar-kiya.mp3"},
-            "kaadhal ponmaan": { displayName: "Kaadhal Ponmaan", imageName: "kaa.jpg", audioFileName: "naalo-unna-parema-nantha.mp3"},
+            "Naalo Unna Parema Nantha": { displayName: "Naalo Unna Parema Nantha", imageName: "naalo.jpg", audioFileName: "naalo-unna-parema-nantha.mp3"},
         };
         
         /**
