--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <div class="chat-window" id="chatWindow">
             <div class="message bot-msg">type song name correct.
-                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">@a.one.code.official</a>  available songs:-  1.Salam, 2.Shariya, 3.mhr munthirichar, 4.nera, 5.Ilakozhiye,6.jaalakaari,7.hope, 8.kaadhal ponmaan (Try typing a few letters!)</div>
+                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">A One Code official</a>  available songs:-  1.Salam, 2.Shariya, 3.mhr munthirichar, 4.nera, 5.Ilakozhiye,6.jaalakaari,7.hope, 8.kaadhal ponmaan (Try typing a few letters!)</div>
             </div>
         
         <div class="input-area">
