--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
         
         <div class="input-area">
-            <button id="showSongsBtn" class="send-btn">➕</button> 
+            <button id="showSongsBtn" class="send-btn">📂</button> 
             
             <input type="text" id="userInput" class="input-box" placeholder="Send Song name...">
             <button id="sendBtn" class="send-btn">➤</button>
@@ -324,7 +324,7 @@
                 } 
                 // മാച്ച് കണ്ടെത്തിയില്ലെങ്കിൽ
                 else {
-                    addMessage(`❌ Sorry, the song "${text}" is not found (Similarity: ${(highestSimilarity * 100).toFixed(0)}%). Please try again or click ➕ for the list.`, 'bot-msg');
+                    addMessage(`❌ Sorry, the song "${text}" is not found (Similarity: ${(highestSimilarity * 100).toFixed(0)}%). Please try again or click 📂 for the list.`, 'bot-msg');
                 }
             }, 600);
         }
