--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="chat-window" id="chatWindow">
             <div class="message bot-msg">
-                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">A One Code official</a> Software update please the bot is not work use for 1/12/2025 (Click 📂 to see all available songs)
+                Check out our Instagram! <a href="https://www.instagram.com/a.one.code.official?igsh=MTl5Zm9heGo4dW9ndA==" target="_blank" style="color: #075e54; text-decoration: none; font-weight: bold;">A One Code official</a> Software update  (Click 📂 to see all available songs)
             </div>
         </div>
         
